# hw13-10

./: .env  pyproject.toml
hw_project/: migration.py  settings.py
quotes/: models.py  urls.py  utils.py  views-my.py  views.py
quotes/migrations/: 0001_initial.py
users/: urls.py
users/migrations/: 0001_initial.py
users/templates/users/: signin.html  signup.html
